--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="midContent">
             <img id="char" src="images/emotes/state_uwu.png" alt="">
             <p id="title">Hello therE!</p>
-            <p id="subtitle">I'm noah and i code stuff & create pixel arT</p>
+            <p id="subtitle">I'm Noah, a programmer & pixel artisT</p>
             <div id="socials">
                 <a href="https://open.spotify.com/user/d1g69g8d4ni9ype7dhfyazy22?si=5490f1a2c00b4444"><img src="images/socials/icon0.png" alt=""></a>
                 <a href="https://twitter.com/pixelingnoah"><img src="images/socials/icon1.png" alt=""></a>
