--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img src="https://releasr.netlify.app/images/favicon.png" alt="">
             </div>
             <div class="link">
-                <a href="palettecrafter.netlify.app">PalettecrafteR</a>
+                <a href="https://palettecrafter.netlify.app">PalettecrafteR</a>
                 <img src="https://palettecrafter.netlify.app/images/icon.png" alt="">
             </div>
         </div>
