--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         <div id="rightContent">
             <p class="midText">My projectS</p>
             <div class="link">
-                <a href="https://releasr.netlify.app/">Spotify release trackeR</a>
-                <img src="https://releasr.netlify.app/images/favicon.png" alt="">
+                <a href="https://releasr.noahschuette.de/">Spotify release trackeR</a>
+                <img src="https://releasr.noahschuette.de/images/favicon.png" alt="">
             </div>
             <div class="link">
-                <a href="https://palettecrafter.netlify.app">PalettecrafteR</a>
-                <img src="https://palettecrafter.netlify.app/images/icon.png" alt="">
+                <a href="https://palettecrafter.noahschuette.de">PalettecrafteR</a>
+                <img src="https://palettecrafter.noahschuette.de/images/icon.png" alt="">
             </div>
         </div>
         <div id="aboutme">
