--- a/404.html
+++ b/404.html
@@ -10,13 +10,14 @@
 </head>
 <body>
 
+<!--
 <div id="scene" data-relative-input="true">
     <img src="https://noahschuette.github.io/error/space0.png" data-depth='1' class="paramimg" id="img-0"/>
     <img src="https://noahschuette.github.io/error/space1.png" data-depth='0.7' class="paramimg" id="img-1"/>
     <img src="https://noahschuette.github.io/error/space2.png" data-depth='0.3' class="paramimg" id="img-2"/>
     <img src="https://noahschuette.github.io/error/space3.png" data-depth='0.1' class="paramimg" id="img-3"/>
     <img src="https://noahschuette.github.io/error/space4.png" data-depth='0.05' class="paramimg" id="img-4"/>
-</div>
+</div> -->
 
 <section class="section">
     <p class="title">404</p>
@@ -30,8 +31,10 @@
     <a class="status" href="https://www.githubstatus.com/">GitHub Pages Status</a>
 </div>
 
+<!--
 <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 <script src="old/parallax.js"></script>
+-->
 
 </body>
 </html>
