added content to about me

--- a/index.html
+++ b/index.html
@@ -79,12 +79,20 @@
             <div id="irl_about" class="aboutMeClass">
                 <p id="aboutMeUpperAbout" class="aboutMeUpperTitle">About me</p>
                 <div id="irl_about_bot">
-                    <img src="../images/chars/char.png" alt="">
+                    <img src="../images/misc/bewerbungsfoto_edited.png" alt="">
                     <div id="irl_about_right">
-                        
-                        <p class="irl_about_text">I'm Noah, 23y/o from Germany</p>
-                        <p class="irl_about_text">Studying computer science & cognitive systems</p>
-                        <p class="irl_about_text">At Bielefeld University</p>
+
+                        <div class="irl_subdiv">
+                            <p>I'm Noah</p>
+                            23y/o from Germany
+                        </div>
+
+                        <div class="irl_subdiv">
+                            Studying
+                            <p>Computer Science & Congnitive Systems</p>
+                            at Bielefeld University
+                        </div>
+                    
                     </div>
                 </div>                
             </div>
@@ -102,6 +110,21 @@
                         <div class="irl_skills_sub"><p>C#</p><img src="images/bar/sprite_2.png" alt=""></div>
                     </div>            
                 </div>                                
+            </div>
+
+            <div id="irl_frameworks" class="aboutMeClass">
+                <p class="aboutMeUpperTitle">My Frameworks</p>
+                <div id="irl_frameworks_sub">
+                    <i title="HTML 5" class="fa-brands fa-html5"></i>
+                    <i title="CSS" class="fa-brands fa-css3"></i>
+                    <i title="NodeJS" class="fa-brands fa-node-js"></i>
+                    <i title="Vue JS" class="fa-brands fa-vuejs"></i>
+                    <i title="Git" class="fa-brands fa-git-alt"></i>
+                    <i title="Android" class="fa-brands fa-android"></i>
+                    <i title="Unity" class="fa-brands fa-unity"></i>
+                    <!-- Flutter -->
+                    <!-- Spring Boot -->
+                </div>
             </div>
         </div>
         <div id="current">
