about me changes

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                         <div class="irl_subdiv">
                             Studying
-                            <p>Computer Science & Congnitive Systems</p>
+                            <p>Computer Science & Cognitive Systems</p>
                             at Bielefeld University
                         </div>
                     
@@ -113,17 +113,36 @@
             </div>
 
             <div id="irl_frameworks" class="aboutMeClass">
-                <p class="aboutMeUpperTitle">My Frameworks</p>
+                <p class="aboutMeUpperTitle">Frameworks & Standards i use</p>
                 <div id="irl_frameworks_sub">
-                    <i title="HTML 5" class="fa-brands fa-html5"></i>
-                    <i title="CSS" class="fa-brands fa-css3"></i>
-                    <i title="NodeJS" class="fa-brands fa-node-js"></i>
-                    <i title="Vue JS" class="fa-brands fa-vuejs"></i>
-                    <i title="Git" class="fa-brands fa-git-alt"></i>
-                    <i title="Android" class="fa-brands fa-android"></i>
-                    <i title="Unity" class="fa-brands fa-unity"></i>
-                    <!-- Flutter -->
-                    <!-- Spring Boot -->
+                    <div id="framework-html" class="framework">
+                        <i title="HTML 5" class="fa-brands fa-html5"></i>
+                        <p>HTML</p>
+                    </div>
+                    <div id="framework-css" class="framework">
+                        <i title="CSS 3" class="fa-brands fa-css3"></i>
+                        <p>CSS</p>
+                    </div>
+                    <div id="framework-node" class="framework">
+                        <i title="NodeJS" class="fa-brands fa-node-js"></i>
+                        <p>NodeJS</p>
+                    </div>
+                    <div id="framework-git" class="framework">
+                        <i title="Git" class="fa-brands fa-git-alt"></i>
+                        <p>Git</p>
+                    </div>
+                    <div id="framework-android" class="framework">
+                        <i title="Android" class="fa-brands fa-android"></i>
+                        <p>Android</p>
+                    </div>
+                    <div id="framework-unity" class="framework">
+                        <i title="Unity" class="fa-brands fa-unity"></i>
+                        <p>Unity</p>
+                    </div>
+                    <div id="framework-flutter" class="framework">
+                        <i class="fa-solid fa-feather"></i>
+                        <p>Flutter</p>
+                    </div>
                 </div>
             </div>
         </div>
