--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Title & Icon -->
     <title>Noah's Homepage</title>
-    <link rel="shortcut icon" href="https://noahschuette.github.io/images/logo.png">
+    <link rel="shortcut icon" href="images/logo.png">
     <!-- Meta -->
     <meta name="description" content="">
     <meta charset="utf-8">
