--- a/palettebin/index.html
+++ b/palettebin/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://noahschuette.github.io/scripts/essentials.css">
+    <link rel="stylesheet" href="https://www.noahschuette.de/scripts/essentials.css">
     <script src="https://kit.fontawesome.com/038f795198.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
