--- a/palettebin/library.html
+++ b/palettebin/library.html
@@ -7,7 +7,7 @@
     <meta name="description" content="View and create color palettes that can be viewed through a simple link. Palettes can be created by hand or via a custom generator. There is also a library with a lot of good palettes you can use.">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://noahschuette.github.io/scripts/essentials.css">
+    <link rel="stylesheet" href="https://www.noahschuette.de/scripts/essentials.css">
     <script src="https://kit.fontawesome.com/038f795198.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="library.js"></script>
@@ -22,9 +22,10 @@
         <p class="libAuthor">n0j0</p>
       </a>
     </section>
+    <!---
     <div class="copyright" style="position: fixed; right: 30px; bottom: 30px;">
-      <a href="https://noahschuette.de" id="n0j0logo"><script onload="replaceLogo('n0j0logo','#8b9bb4')" src="https://noahschuette.github.io/scripts/essentials.js"></script></a>
+      <a href="https://www.noahschuette.de" id="n0j0logo"><script onload="replaceLogo('n0j0logo','#8b9bb4')" src="https://www.noahschuette.de/scripts/essentials.js"></script></a>
       <p style="color: #8b9bb4; font-weight: 700; font-size: 15px;">&copy; 2021</p>
-    </div>
+    </div>-->
   </body>
 </html>
