--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
         </div>
     </div>    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>-->
     <script src="parallax.js" type="module" onload="parallax()"></script> 
 </body>
 </html>
