--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <button onclick="toggle('about')" class="toggleMid"><i class="fa-solid fa-address-card"></i> ABOUT ME</button>
             <button id="toggleMidDisabled" class="toggleMid"><i class="fa-solid fa-face-grin-beam-sweat"></i> LOADING...</button>
             <button id="toggleMidEnabled" onclick="toggle('current')" class="toggleMid"><i class="fa-solid fa-face-grin-beam"></i> PERSONAL PAGE</button>
-            <button onclick="redirect('https://n0j0.artstation.com/')" class="toggleMid"><i class="fa-solid fa-dice-d6"></i> PIXEL ART</button>
+            <button id="pixelArtToggle" onclick="redirect('https://n0j0.artstation.com/')" class="toggleMid"><i class="fa-solid fa-dice-d6"></i> PIXEL ART</button>
         </div>
         <!--<div id="pixelArtMobile" onclick="redirect('https://n0j0.artstation.com/')">
             <img id="pixelArtSmall" src="https://raw.githubusercontent.com/n0j0games/pixelart/main/graduation_small.gif" alt="">
