--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="leftContent" onclick="redirect('https://n0j0.artstation.com/')">
             <img class="pixelArt" id="pixelArt2" src="https://cdnb.artstation.com/p/assets/images/images/061/318/419/large/noah-flower-boy-2.jpg?1680525279" alt="">
             <img class="pixelArt" id="pixelArt1" src="https://raw.githubusercontent.com/n0j0games/pixelart/main/graduation_small.gif" alt="">
-            <img class="pixelArt" id="pixelArt0" src="https://raw.githubusercontent.com/n0j0games/pixelart/main/heroesVillains.png" alt="">
+            <img class="pixelArt" id="pixelArt0" src="https://cdna.artstation.com/p/assets/images/images/060/747/444/large/noah-heroesvillains.jpg?1679246367" alt="">
             <div id="arrowLeftDiv">
                 <img id="arrowLeft" src="images/misc/arrow1.png" alt="">
                 <p class="midText" id="arrowLeftText">Look at my pixelarT</p>
