changed char back to old

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div id="midContent">
-            <img id="char" src="images/chars/state_uwu.png" alt="">
+            <img id="char" src="images/chars/char.png" alt="">
             <p id="title">Hello therE!</p>
             <p id="subtitle">I'm Noah, a programmer & pixel artisT</p>
             <div id="socials">
