disabling some pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="https://github.com/n0j0games"><img src="images/socials/icon6.png" alt="github"></a>
             </div>
             <button onclick="toggle('about')" class="toggleMid"><i class="fa-solid fa-address-card"></i> ABOUT ME</button>
-            <button id="toggleMidDisabled" class="toggleMid"><i class="fa-solid fa-face-grin-beam-sweat"></i> LOADING...</button>
+            <!--<button id="toggleMidDisabled" class="toggleMid"><i class="fa-solid fa-face-grin-beam-sweat"></i> LOADING...</button>-->
             <button id="toggleMidEnabled" onclick="toggle('current')" class="toggleMid"><i class="fa-solid fa-face-grin-beam"></i> PERSONAL PAGE</button>
             <button id="pixelArtToggle" onclick="redirect('https://n0j0.artstation.com/')" class="toggleMid"><i class="fa-solid fa-dice-d6"></i> PIXEL ART</button>
         </div>
@@ -66,10 +66,10 @@
                 <a onclick="loadProject('palettecrafter')">PalettecrafteR</a>
                 <img src="https://palettecrafter.noahschuette.de/images/icon.png" alt="">
             </div>
-            <div class="link">
+            <!--<div class="link">
                 <a onclick="loadProject('smashteroid')">SmashteroiD</a>
                 <img src="https://n0j0games.github.io/n0j0games_archive/images/smashteroidLogo.png" alt="">
-            </div>
+            </div>-->
         </div>
         <div id="aboutme">
 
@@ -78,7 +78,7 @@
             <div id="irl_about" class="aboutMeClass">
                 <p id="aboutMeUpperAbout" class="aboutMeUpperTitle">About me</p>
                 <div id="irl_about_bot">
-                    <img src="../images/misc/bewerbungsfoto_edited.png" alt="">
+                    <img src="../images/misc/foto2.jpg" alt="">
                     <div id="irl_about_right">
 
                         <div class="irl_subdiv">
@@ -87,9 +87,8 @@
                         </div>
 
                         <div class="irl_subdiv">
-                            Studying
-                            <p>Computer Science & Cognitive Systems</p>
-                            at Bielefeld University
+                            Currently working as a
+                            <p>Web Developer</p>
                         </div>
                     
                     </div>
@@ -100,7 +99,7 @@
                 <p class="aboutMeUpperTitle">My Programming Languages</p>
                 <div id="irl_skills_parts">
                     <div class="irl_skills_part">
-                        <div class="irl_skills_sub"><p>JavaScript</p><img src="images/bar/sprite_5.png" alt=""></div>
+                        <div class="irl_skills_sub"><p>JS/TS</p><img src="images/bar/sprite_5.png" alt=""></div>
                         <div class="irl_skills_sub"><p>Java</p><img src="images/bar/sprite_4.png" alt=""></div>
                         <div class="irl_skills_sub"><p>Dart</p><img src="images/bar/sprite_2.png" alt=""></div>
                     </div>
@@ -123,8 +122,8 @@
                         <p>CSS</p>
                     </div>
                     <div id="framework-node" class="framework">
-                        <i title="NodeJS" class="fa-brands fa-node-js"></i>
-                        <p>NodeJS</p>
+                        <i title="Angular" class="fa-brands fa-angular"></i>
+                        <p>Angular</p>
                     </div>
                     <div id="framework-git" class="framework">
                         <i title="Git" class="fa-brands fa-git-alt"></i>
