--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p id="subtitle">I'm Noah, a programmer & pixel artisT</p>
             <div id="socials">
                 <a href="https://open.spotify.com/user/d1g69g8d4ni9ype7dhfyazy22?si=5490f1a2c00b4444"><img src="images/socials/icon0.png" alt="spotify"></a>
-                <a href="https://twitter.com/pixelingnoah"><img src="images/socials/icon5.png" alt="twitter"></a>                
+                <a href="https://twitter.com/laughnoahcryltr"><img src="images/socials/icon5.png" alt="twitter"></a>                
                 <!--<a href="https://discord.com/users/227504919140106240"><img src="images/socials/icon3.png" alt=""></a>-->
                 <a href="https://www.linkedin.com/in/noah-sch%C3%BCtte-044695295/"><img src="images/socials/icon4.png" alt="linkedin"></a>
                 <a href="https://github.com/n0j0games"><img src="images/socials/icon6.png" alt="github"></a>
