--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div id="midContent">
             <img id="char" src="images/chars/char.png" alt="">
             <p id="title">Hello therE!</p>
-            <p id="subtitle">I'm Noah, a programmer & pixel artisT</p>
+            <p id="subtitle">I'm Noah, a web developer & pixel artisT</p>
             <div id="socials">
                 <a href="https://open.spotify.com/user/d1g69g8d4ni9ype7dhfyazy22?si=5490f1a2c00b4444"><img src="images/socials/icon0.png" alt="spotify"></a>
                 <a href="https://twitter.com/laughnoahcryltr"><img src="images/socials/icon5.png" alt="twitter"></a>                
@@ -66,6 +66,10 @@
                 <a onclick="loadProject('palettecrafter')">PalettecrafteR</a>
                 <img src="https://palettecrafter.noahschuette.de/images/icon.png" alt="">
             </div>
+            <div class="link">
+                <a onclick="loadProject('ratenowcrylater')">Rate now cry lateR</a>
+                <img src="https://ratenowcrylater.netlify.app/assets/favicon.png" alt="">
+            </div>
             <!--<div class="link">
                 <a onclick="loadProject('smashteroid')">SmashteroiD</a>
                 <img src="https://n0j0games.github.io/n0j0games_archive/images/smashteroidLogo.png" alt="">
@@ -78,17 +82,17 @@
             <div id="irl_about" class="aboutMeClass">
                 <p id="aboutMeUpperAbout" class="aboutMeUpperTitle">About me</p>
                 <div id="irl_about_bot">
-                    <img src="../images/misc/foto2.jpg" alt="">
+                    <img src="../images/misc/foto3.jpg" alt="">
                     <div id="irl_about_right">
 
                         <div class="irl_subdiv">
                             <p>I'm Noah</p>
-                            23y/o from Germany
+                            24y/o from Germany
                         </div>
 
                         <div class="irl_subdiv">
                             Currently working as a
-                            <p>Web Developer</p>
+                            <p>Full-Stack/Web Developer</p>
                         </div>
                     
                     </div>
@@ -100,13 +104,14 @@
                 <div id="irl_skills_parts">
                     <div class="irl_skills_part">
                         <div class="irl_skills_sub"><p>JS/TS</p><img src="images/bar/sprite_5.png" alt=""></div>
-                        <div class="irl_skills_sub"><p>Java</p><img src="images/bar/sprite_4.png" alt=""></div>
+                        <div class="irl_skills_sub"><p>Java</p><img src="images/bar/sprite_5.png" alt=""></div>
+                        <div class="irl_skills_sub"><p>Python</p><img src="images/bar/sprite_3.png" alt=""></div>
                         <div class="irl_skills_sub"><p>Dart</p><img src="images/bar/sprite_2.png" alt=""></div>
                     </div>
-                    <div class="irl_skills_part">
-                        <div class="irl_skills_sub"><p>Python</p><img src="images/bar/sprite_4.png" alt=""></div>
+                    <!--<div class="irl_skills_part">
+
                         <div class="irl_skills_sub"><p>C#</p><img src="images/bar/sprite_2.png" alt=""></div>
-                    </div>            
+                    </div>-->
                 </div>                                
             </div>
 
@@ -125,22 +130,22 @@
                         <i title="Angular" class="fa-brands fa-angular"></i>
                         <p>Angular</p>
                     </div>
-                    <div id="framework-git" class="framework">
+                    <!--<div id="framework-git" class="framework">
                         <i title="Git" class="fa-brands fa-git-alt"></i>
                         <p>Git</p>
-                    </div>
-                    <div id="framework-android" class="framework">
+                    </div>-->
+                    <!--<div id="framework-android" class="framework">
                         <i title="Android" class="fa-brands fa-android"></i>
                         <p>Android</p>
-                    </div>
+                    </div>-->
                     <div id="framework-unity" class="framework">
                         <i title="Unity" class="fa-brands fa-unity"></i>
                         <p>Unity</p>
                     </div>
-                    <div id="framework-flutter" class="framework">
+                    <!--<div id="framework-flutter" class="framework">
                         <i class="fa-solid fa-feather"></i>
                         <p>Flutter</p>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
