--- a/index.html
+++ b/index.html
@@ -82,12 +82,18 @@
             <div id="irl_about" class="aboutMeClass">
                 <p id="aboutMeUpperAbout" class="aboutMeUpperTitle">About me</p>
                 <div id="irl_about_bot">
-                    <img src="../images/misc/foto3.jpg" alt="">
+                    <img src="../images/misc/abschluss.jpg" alt="">
                     <div id="irl_about_right">
 
                         <div class="irl_subdiv">
                             <p>I'm Noah</p>
                             24y/o from Germany
+                        </div>
+
+                        <div class="irl_subdiv">
+                            I graduated with a bachelor's degree in
+                            <p>Computer Science & Cognitive Systems</p>
+                            from Bielefeld University
                         </div>
 
                         <div class="irl_subdiv">
@@ -103,10 +109,10 @@
                 <p class="aboutMeUpperTitle">My Programming Languages</p>
                 <div id="irl_skills_parts">
                     <div class="irl_skills_part">
-                        <div class="irl_skills_sub"><p>JS/TS</p><img src="images/bar/sprite_5.png" alt=""></div>
+                        <div class="irl_skills_sub"><p>Typescript</p><img src="images/bar/sprite_5.png" alt=""></div>
                         <div class="irl_skills_sub"><p>Java</p><img src="images/bar/sprite_5.png" alt=""></div>
-                        <div class="irl_skills_sub"><p>Python</p><img src="images/bar/sprite_3.png" alt=""></div>
-                        <div class="irl_skills_sub"><p>Dart</p><img src="images/bar/sprite_2.png" alt=""></div>
+                        <div class="irl_skills_sub"><p>Javascript</p><img src="images/bar/sprite_3.png" alt=""></div>
+                        <div class="irl_skills_sub"><p>Python</p><img src="images/bar/sprite_2.png" alt=""></div>
                     </div>
                     <!--<div class="irl_skills_part">
 
